--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.1.3",
+    "@angular/animations": "^20.3.0",
     "@angular/common": "^20.3.0",
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@primeng/themes": "^21.0.4",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
