--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@arcgis/core": "^4.34.8",
     "@primeng/themes": "^21.0.4",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0",
